Fixed improved footer background on small screens

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -315,6 +315,7 @@ footer {
         height: 29px;
         margin: 0 auto 31px;
         position: relative;
+        max-width: 100%;
 
         .bulb {
             position: absolute;
